--- a/workbook2.ipynb
+++ b/workbook2.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,11 +50,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: duckdb in /opt/anaconda3/envs/datajournal/lib/python3.12/site-packages (1.2.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: numpy in /opt/anaconda3/envs/datajournal/lib/python3.12/site-packages (2.2.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting pandas\n",
+      "  Downloading pandas-2.2.3-cp312-cp312-macosx_11_0_arm64.whl.metadata (89 kB)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /opt/anaconda3/envs/datajournal/lib/python3.12/site-packages (from pandas) (2.2.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/anaconda3/envs/datajournal/lib/python3.12/site-packages (from pandas) (2.9.0.post0)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Downloading pytz-2025.1-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "Collecting tzdata>=2022.7 (from pandas)\n",
+      "  Downloading tzdata-2025.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/anaconda3/envs/datajournal/lib/python3.12/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Downloading pandas-2.2.3-cp312-cp312-macosx_11_0_arm64.whl (11.4 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.4/11.4 MB\u001b[0m \u001b[31m33.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading pytz-2025.1-py2.py3-none-any.whl (507 kB)\n",
+      "Downloading tzdata-2025.1-py2.py3-none-any.whl (346 kB)\n",
+      "Installing collected packages: pytz, tzdata, pandas\n",
+      "Successfully installed pandas-2.2.3 pytz-2025.1 tzdata-2025.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "#%pip install duckdb"
+    "%pip install duckdb\n",
+    "%pip install numpy\n",
+    "%pip install pandas"
    ]
   },
   {
@@ -66,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -199,13 +228,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       \"first\"(\"name\")  CountRoles\n",
+      "0          Boman Irani          25\n",
+      "1  Kareena Kapoor Khan          25\n",
+      "2       Shah Rukh Khan          23\n",
+      "3     Takahiro Sakurai          21\n",
+      "4          Raúl Campos          20\n"
+     ]
+    }
+   ],
    "source": [
     "#A1 your code here\n",
     "#part 1 is already done for you\n",
-    "credits = pd.read_csv('credits.csv')"
+    "credits = pd.read_csv('credits.csv')\n",
+    "topActors = duckdb.sql(\"\"\" SELECT FIRST(name), COUNT(person_id) AS CountRoles \n",
+    "                     FROM credits \n",
+    "                     GROUP BY person_id\n",
+    "                     ORDER by CountRoles Desc\"\"\").df()\n",
+    "print(topActors[0:5])"
    ]
   },
   {
@@ -246,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +378,7 @@
        "77800    1950416  tm1059008      Julian Gaviria           NaN  DIRECTOR"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +485,7 @@
        "77799     378132  tm1059008        Isabel Gaona        Cacica  ACTOR"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +589,7 @@
        "68028     378132  tm1059008        Isabel Gaona        Cacica  ACTOR"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +716,7 @@
        "4  tm84618  Cybill Shepherd                    Betsy  Taxi Driver         8.2"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,11 +769,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "BinderException",
+     "evalue": "Binder Error: Referenced column \"DIRECTOR\" not found in FROM clause!\nCandidate bindings: \"name\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mBinderException\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[52], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#C1 your code here\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m directors \u001b[38;5;241m=\u001b[39m duckdb\u001b[38;5;241m.\u001b[39msql(\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mSELECT Count(*) AS count, AVG(titles.imdb_score) AS score \u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124m                       FROM credits\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124m                       LEFT JOIN titles ON credits.id = titles.id\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124m                       WHERE role = DIRECTOR                                          \u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124m                       GROUP BY credits.name\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\u001b[38;5;241m.\u001b[39mdf()\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(directors)\n\u001b[1;32m      8\u001b[0m top_directors \u001b[38;5;241m=\u001b[39m duckdb\u001b[38;5;241m.\u001b[39msql(\u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mSELECT\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m)\u001b[38;5;241m.\u001b[39mdf()\n",
+      "\u001b[0;31mBinderException\u001b[0m: Binder Error: Referenced column \"DIRECTOR\" not found in FROM clause!\nCandidate bindings: \"name\""
+     ]
+    }
+   ],
    "source": [
-    "#C1 your code here"
+    "#C1 your code here\n",
+    "directors = duckdb.sql(\"\"\"SELECT Count(*) AS count, AVG(titles.imdb_score) AS score \n",
+    "                       FROM credits\n",
+    "                       LEFT JOIN titles ON credits.id = titles.id\n",
+    "                       WHERE role = DIRECTOR                                          \n",
+    "                       GROUP BY credits.name\"\"\").df()\n",
+    "print(directors)\n",
+    "top_directors = duckdb.sql(\"\"\"SELECT\"\"\").df()"
    ]
   },
   {
@@ -805,7 +871,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "info2950FA24",
+   "display_name": "datajournal",
    "language": "python",
    "name": "python3"
   },
@@ -819,7 +885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
