--- a/workbook4.ipynb
+++ b/workbook4.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "4  Afghanistan      Asia  1972   36.088  13079460  739.981106"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "4       0        0  "
       ]
      },
-     "execution_count": 271,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +1030,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "info2950FA24",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1044,7 +1044,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
